--- a/CSS/codigo.css
+++ b/CSS/codigo.css
@@ -3,10 +3,19 @@ body{
     margin: 0;
     padding: 0;
     background-color: rgb(10, 10, 10, 0.3);
+    background-image: url(../Imagenes/imgbackground.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: exclusion;
+                        
     
 }
 
 .navbarCarrito{
+    position: fixed; z-index: 999999;
+    width: 99vw;
+    height: 15vh;
+    top: 0px;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
@@ -24,8 +33,11 @@ body{
 }
 
 .verCarrito{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 10vw;
-    height: 5vh;
+    height: 7vh;
     color: white;
     font-size: 20px;
     background-color: black;
@@ -36,15 +48,22 @@ body{
     
 }
 
+.verCarrito:hover{
+    color: grey;
+}
+
 .botonCarrito:hover{
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .contenidoCompras{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 40px;
+    margin-top: 200px;
+    margin-left: 17%;
+    max-width: 70vw;
+    
 }
 
 
@@ -57,7 +76,6 @@ body{
     margin: 15px;
     width: 50vh;
     background-color: white;
-    
     height: auto;
     text-align: center;
     -webkit-box-shadow: 0px 0px 16px 5px rgba(0,0,0,0.53);
@@ -111,7 +129,9 @@ body{
 .modalContainer{
     width: 80%;
     max-height: 90vh;
-    margin-left: 110px;
+    margin-left: 150px;
+    margin-top: 10px;
+   
     color: white;
     background-color: black;
     opacity: 1;
@@ -133,8 +153,14 @@ body{
     align-items: center;
     color: black;
     padding: 20px;
+    
     background: rgb(208,83,11);
     background: linear-gradient(0deg, rgba(208,83,11,0.6839110644257703) 0%, rgba(245,245,245,0.9668242296918768) 100%);
+}
+
+.modalHeaderTitulo{
+    color: white;
+    filter: drop-shadow(5px 5px 2px #050505)
 }
 
 .modalHeaderBoton{
@@ -177,4 +203,51 @@ body{
 
 .eliminarProducto{
     cursor: pointer;
+}
+
+
+.cleanCarritoBotom{
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    filter: drop-shadow(3px 3px 2px #050505);
+    
+}
+
+.restar{
+    cursor: pointer;
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+
+.sumar{
+    cursor: pointer;
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+
+.cantidadCarrito{
+    background-color: red;
+    border-radius: 50%;
+    width: 25px;
+    padding: 4px;
+    position: absolute;
+    top: 37px;
+    right: 15px;
+    display: none;
+   
+}
+
+.btnFinCompra{
+    background-color: rgb(22, 199, 22);
+    color: black;
+    border-radius: 25% 25%;
+    width: 30px;
+    height: 40px;
+}
+
+.finalizarCompra{
+    color: white;
+    font-size: 30px;
+    background-color: darkgoldenrod;
 }
